# file-icon-provider-demo

./: README.md  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/icon/: Cargo.toml  build.rs
src-tauri/src/plugins/icon/permissions/: default.toml
src-tauri/src/plugins/icon/permissions/autogenerated/: reference.md
src-tauri/src/plugins/icon/permissions/schemas/: schema.json
src-tauri/src/plugins/icon/src/: commands.rs  lib.rs
